--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                <div class="navbar-nav">
                   <a class="nav-item nav-link" href="index.html">Accueil</a>
-                  <a class="nav-item nav-link" href="about.html">About</a>
-                  <a class="nav-item nav-link" href="teashop.html">Teashop</a>
-                  <a class="nav-item nav-link" href="pricing.html">Pricing</a>
-                  <a class="nav-item nav-link" href="testimonies.html">Testimonies</a>
-                  <a class="nav-item nav-link" href="contact.html">Contact</a>
+                  <a class="nav-item nav-link" href="about.html">a propos</a>
+                  <a class="nav-item nav-link" href="teashop.html">Nos offres</a>
+                  <a class="nav-item nav-link" href="pricing.html">Tarifs</a>
+                  <a class="nav-item nav-link" href="testimonies.html">black tea</a>
+                  <a class="nav-item nav-link" href="contact.html">contact us</a>
                </div>
             </div>
             <div class="login_menu">
